--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -1,7 +1,7 @@
 .grid-form{
     padding: 1rem;
     height:100vh;
-    background: linear-gradient(to right,rgb(193, 206, 248),#bfeff8,rgb(186, 250, 234));
+    background: linear-gradient(90deg, rgb(132, 218, 252), #ffffff,rgb(132, 218, 252) );
     
   }
   
