Display Channels on Sidebar

--- a/src/components/sidebar/UserInfo/UserInfo.css
+++ b/src/components/sidebar/UserInfo/UserInfo.css
@@ -6,8 +6,8 @@
 .userinfo_displayname{
     padding-left: 1.1em !important; 
     padding-bottom: 1.5rem !important;
-    color:#4c962f !important ;
+    color:#3fb80f !important ;
 }
 .content{
-    color:#82fc52 !important ;
+    color:#6aca44 !important ;
 }
