Add and enable Messages

--- a/src/components/sidebar/UserInfo/UserInfo.css
+++ b/src/components/sidebar/UserInfo/UserInfo.css
@@ -6,7 +6,7 @@
 .userinfo_displayname{
     padding-left: 1.1em !important; 
     padding-bottom: 1.5rem !important;
-    color:#3fb80f !important ;
+    color:#48b11f !important ;
 }
 .content{
     color:#6aca44 !important ;
